--- a/eng/common/tsp-client/package.json
+++ b/eng/common/tsp-client/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@azure-tools/typespec-client-generator-cli": "0.31.0"
+    "@azure-tools/typespec-client-generator-cli": "0.31.0",
+    "tar": "^7.5.3"
   }
 }
